--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <style>
-        /* Couleurs institutionnelles */
         :root {
             --primary-blue: #003366;
             --secondary-gold: #ffcc00;
@@ -25,7 +24,8 @@
             color: #222;
             scroll-behavior: smooth;
         }
-        h1, h2, h3, h4 { margin: 0; }
+
+        h1,h2,h3,h4 { margin: 0; }
 
         /* --- HEADER --- */
         header {
@@ -39,163 +39,82 @@
             top: 0;
             z-index: 100;
         }
-        header h1 {
-            font-size: 1.6em;
-            font-weight: 700;
-            color: var(--primary-blue);
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 25px;
-            margin: 0;
-            padding: 0;
-        }
-        nav a {
-            color: var(--primary-blue);
-            text-decoration: none;
-            font-weight: 500;
-            transition: color var(--transition-speed);
-        }
-        nav a:hover {
-            color: var(--secondary-gold);
-        }
+        header h1 { font-size:1.6em; font-weight:700; color:var(--primary-blue);}
+        nav ul { list-style:none; display:flex; gap:25px; margin:0; padding:0;}
+        nav a { color: var(--primary-blue); text-decoration:none; font-weight:500; transition: color var(--transition-speed);}
+        nav a:hover { color: var(--secondary-gold); }
 
-        /* --- HERO --- */
+        /* --- HERO / Slider --- */
         .hero {
-            background-color: white;
-            padding: 80px 5%;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
+            background-color:white;
+            padding:60px 5%;
+            text-align:center;
+            border-bottom:1px solid #ddd;
         }
-        .hero h2 {
-            font-size: 2em;
-            color: var(--primary-blue);
-            font-weight: 500;
-            margin-bottom: 15px;
-        }
-        .hero p {
-            font-size: 1.1em;
-            color: #555;
-            max-width: 800px;
-            margin: 0 auto;
-        }
+        .hero h2 { font-size:2em; color:var(--primary-blue); font-weight:500; margin-bottom:15px;}
+        .hero p { font-size:1.1em; color:#555; max-width:800px; margin:0 auto;}
 
-        /* --- CARTES D'ACCÈS RAPIDES --- */
+        /* --- QUICK ACCESS --- */
         .quick-access {
-            display: grid;
+            display:grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 20px;
-            margin: 40px 0;
+            gap:20px;
+            margin:40px 0;
         }
         .card {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            text-align: center;
+            background:white;
+            padding:20px;
+            border-radius:8px;
+            box-shadow:0 2px 5px rgba(0,0,0,0.1);
+            text-align:center;
             transition: transform var(--transition-speed);
         }
-        .card:hover {
-            transform: translateY(-5px);
-        }
-        .card i {
-            font-size: 2.5em;
-            color: var(--primary-blue);
-            margin-bottom: 10px;
-        }
-        .card h4 {
-            font-size: 1.1em;
-            margin-bottom: 10px;
-            color: var(--primary-blue);
-        }
-        .card p {
-            font-size: 0.95em;
-            color: #555;
-        }
+        .card:hover { transform: translateY(-5px);}
+        .card i { font-size:2.5em; color: var(--primary-blue); margin-bottom:10px;}
+        .card h4 { font-size:1.1em; margin-bottom:10px; color: var(--primary-blue);}
+        .card p { font-size:0.95em; color:#555;}
 
         /* --- MAIN --- */
-        main {
-            padding: 40px 5%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        main h3 {
-            font-size: 1.5em;
-            color: var(--primary-blue);
-            margin-bottom: 15px;
-        }
-        main p {
-            color: #444;
-            line-height: 1.6;
-        }
+        main { padding:40px 5%; max-width:1200px; margin:0 auto;}
+        main section { margin-bottom:60px; }
+        main h3 { font-size:1.5em; color:var(--primary-blue); margin-bottom:15px; }
+        main p { color:#444; line-height:1.6; }
 
         /* --- FOOTER --- */
         footer {
             background-color: var(--footer-bg);
-            color: white;
-            padding: 30px 5%;
+            color:white;
+            padding:30px 5%;
         }
         .footer-content {
-            display: grid;
+            display:grid;
             grid-template-columns: repeat(3, 1fr);
-            max-width: 1200px;
-            margin: 0 auto 20px auto;
-            gap: 30px;
+            max-width:1200px;
+            margin:0 auto 20px auto;
+            gap:30px;
         }
         .footer-col h4 {
-            font-size: 1.1em;
-            font-weight: 600;
-            border-bottom: 2px solid var(--secondary-gold);
-            padding-bottom: 5px;
-            margin-bottom: 15px;
-            color: white;
+            font-size:1.1em;
+            font-weight:600;
+            border-bottom:2px solid var(--secondary-gold);
+            padding-bottom:5px;
+            margin-bottom:15px;
+            color:white;
         }
-        .footer-col ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        .footer-col a {
-            color: #ccc;
-            text-decoration: none;
-            display: block;
-            padding: 5px 0;
-            transition: color var(--transition-speed);
-        }
-        .footer-col a:hover {
-            color: var(--secondary-gold);
-        }
-        .footer-col i {
-            margin-right: 8px;
-            color: var(--secondary-gold);
-        }
-        .social-icons a {
-            font-size: 1.5em;
-            margin-right: 15px;
-            color: white;
-        }
-        .copyright-bar {
-            background-color: #002244;
-            color: #bbb;
-            text-align: center;
-            padding: 10px 5%;
-            font-size: 0.85em;
-        }
-        .copyright-bar a {
-            color: #ccc;
-            text-decoration: underline;
-        }
+        .footer-col ul { list-style:none; padding:0; margin:0;}
+        .footer-col a { color:#ccc; text-decoration:none; display:block; padding:5px 0; transition: color var(--transition-speed);}
+        .footer-col a:hover { color:var(--secondary-gold);}
+        .social-icons a { font-size:1.5em; margin-right:15px; color:white; }
+        .copyright-bar { background-color:#002244; color:#bbb; text-align:center; padding:10px 5%; font-size:0.85em;}
+        .copyright-bar a { color:#ccc; text-decoration:underline; }
 
-        @media (max-width: 768px) {
-            header { flex-direction: column; text-align: center; }
-            nav ul { flex-wrap: wrap; justify-content: center; margin-top: 10px; }
-            .hero { padding: 40px 5%; }
-            .hero h2 { font-size: 1.5em; }
-            .quick-access { grid-template-columns: 1fr; }
-            .footer-content { grid-template-columns: 1fr; text-align: center; }
-            .footer-col h4 { border-bottom: none; }
-            .social-icons { text-align: center; }
+        @media(max-width:768px){
+            header{flex-direction:column;text-align:center;}
+            nav ul{flex-wrap:wrap; justify-content:center; margin-top:10px;}
+            .hero{padding:40px 5%;} .hero h2{font-size:1.5em;}
+            .quick-access{grid-template-columns:1fr;}
+            .footer-content{grid-template-columns:1fr; text-align:center;}
+            .social-icons{text-align:center;}
         }
     </style>
 </head>
@@ -204,47 +123,90 @@
         <h1>🏛️ Mairie de Kolwezi</h1>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="projets.html">Projets</a></li>
-                <li><a href="actualites.html">Actualités</a></li>
-                <li><a href="evenements.html">Événements</a></li>
-                <li><a href="apropos.html">À propos</a></li>
+                <li><a href="#accueil" class="active">Accueil</a></li>
+                <li><a href="#institution">La Mairie</a></li>
+                <li><a href="#actualites">Actualités & Événements</a></li>
+                <li><a href="#services">Services aux citoyens</a></li>
+                <li><a href="#demarches">Démarches en ligne</a></li>
+                <li><a href="#projets">Projets et Développement</a></li>
+                <li><a href="#galerie">Galerie</a></li>
+                <li><a href="#contact">Contact / FAQ</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Bienvenue sur le site de la Mairie de Kolwezi</h2>
-        <p>
-            Retrouvez toutes les informations sur les services municipaux, les projets, actualités et événements de la ville de Kolwezi.
-        </p>
+    <!-- HERO / Présentation -->
+    <section class="hero" id="accueil">
+        <h2>Bienvenue à la Mairie de Kolwezi</h2>
+        <p>Découvrez nos services municipaux, actualités et projets pour améliorer la vie des citoyens.</p>
     </section>
 
+    <!-- Accès rapides -->
     <main>
-        <h3>Accès rapides</h3>
-        <div class="quick-access">
+        <section class="quick-access">
             <div class="card">
                 <i class="fas fa-file-alt"></i>
                 <h4>Formulaires en ligne</h4>
-                <p>Téléchargez ou remplissez vos formulaires administratifs facilement.</p>
+                <p>Téléchargez ou remplissez vos formulaires administratifs.</p>
             </div>
             <div class="card">
                 <i class="fas fa-calendar-check"></i>
                 <h4>Prise de rendez-vous</h4>
-                <p>Réservez vos rendez-vous pour les services municipaux en un clic.</p>
+                <p>Réservez vos rendez-vous pour les services municipaux.</p>
             </div>
             <div class="card">
                 <i class="fas fa-credit-card"></i>
                 <h4>Paiement en ligne</h4>
-                <p>Payez vos taxes, permis ou licences directement sur le site.</p>
+                <p>Payez vos taxes et licences directement depuis le site.</p>
             </div>
-        </div>
+        </section>
 
-        <h3>Actualités récentes</h3>
-        <p>Insérer ici les actualités de la ville, événements, annonces officielles et mots du maire.</p>
+        <!-- Institution / La Mairie -->
+        <section id="institution">
+            <h3>La Mairie / Institution</h3>
+            <p>Présentation : histoire, missions, vision et valeurs de la Mairie de Kolwezi.</p>
+            <p>Organigramme : maire, adjoints et services municipaux.</p>
+            <p>Services : urbanisme, voirie, sécurité, environnement…</p>
+        </section>
+
+        <!-- Actualités & Événements -->
+        <section id="actualites">
+            <h3>Actualités & Événements</h3>
+            <p>Communiqués officiels, événements municipaux et alertes importantes.</p>
+        </section>
+
+        <!-- Services aux citoyens -->
+        <section id="services">
+            <h3>Services aux citoyens</h3>
+            <p>État civil, taxes, urbanisme, transports, services sociaux et plus.</p>
+        </section>
+
+        <!-- Démarches en ligne -->
+        <section id="demarches">
+            <h3>Démarches en ligne</h3>
+            <p>Formulaires téléchargeables, prise de rendez-vous et paiements en ligne.</p>
+        </section>
+
+        <!-- Projets et Développement -->
+        <section id="projets">
+            <h3>Projets et Développement</h3>
+            <p>Projets en cours et futurs, partenariats et coopération.</p>
+        </section>
+
+        <!-- Galerie -->
+        <section id="galerie">
+            <h3>Galerie</h3>
+            <p>Photos et vidéos des événements, projets et cérémonies officielles.</p>
+        </section>
+
+        <!-- Contact / FAQ -->
+        <section id="contact">
+            <h3>Contact / FAQ</h3>
+            <p>Formulaire de contact, adresses et numéros utiles, questions fréquentes.</p>
+        </section>
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <div class="footer-content">
             <div class="footer-col">
@@ -256,11 +218,14 @@
             <div class="footer-col">
                 <h4>Liens rapides</h4>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="projets.html">Projets</a></li>
-                    <li><a href="actualites.html">Actualités</a></li>
-                    <li><a href="evenements.html">Événements</a></li>
+                    <li><a href="#accueil">Accueil</a></li>
+                    <li><a href="#institution">La Mairie</a></li>
+                    <li><a href="#actualites">Actualités & Événements</a></li>
+                    <li><a href="#services">Services aux citoyens</a></li>
+                    <li><a href="#demarches">Démarches en ligne</a></li>
+                    <li><a href="#projets">Projets et Développement</a></li>
+                    <li><a href="#galerie">Galerie</a></li>
+                    <li><a href="#contact">Contact / FAQ</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -279,7 +244,7 @@
         &copy; 2025 Mairie de Kolwezi - Tous droits réservés | <a href="#">Mentions Légales</a>
     </div>
 
-    <!-- CONFIGURATION DE BASE DE DONNÉES FIREBASE -->
+    <!-- FIREBASE -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
         import { getFirestore } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
@@ -295,7 +260,6 @@
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
-
         console.log("✅ Firebase initialisé et Firestore prêt !");
     </script>
 </body>
