--- a/index.html
+++ b/index.html
@@ -1,266 +1,125 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mairie de Kolwezi - Au service du citoyen</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-    <style>
-        :root {
-            --primary-blue: #003366;
-            --secondary-gold: #ffcc00;
-            --light-bg: #f8f9fb;
-            --header-bg: #fff;
-            --footer-bg: #003366;
-            --transition-speed: 0.3s;
-        }
-
-        body {
-            margin: 0;
-            font-family: "Poppins", sans-serif;
-            background-color: var(--light-bg);
-            color: #222;
-            scroll-behavior: smooth;
-        }
-
-        h1,h2,h3,h4 { margin: 0; }
-
-        /* --- HEADER --- */
-        header {
-            background: var(--header-bg);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 5%;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-        header h1 { font-size:1.6em; font-weight:700; color:var(--primary-blue);}
-        nav ul { list-style:none; display:flex; gap:25px; margin:0; padding:0;}
-        nav a { color: var(--primary-blue); text-decoration:none; font-weight:500; transition: color var(--transition-speed);}
-        nav a:hover { color: var(--secondary-gold); }
-
-        /* --- HERO / Slider --- */
-        .hero {
-            background-color:white;
-            padding:60px 5%;
-            text-align:center;
-            border-bottom:1px solid #ddd;
-        }
-        .hero h2 { font-size:2em; color:var(--primary-blue); font-weight:500; margin-bottom:15px;}
-        .hero p { font-size:1.1em; color:#555; max-width:800px; margin:0 auto;}
-
-        /* --- QUICK ACCESS --- */
-        .quick-access {
-            display:grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap:20px;
-            margin:40px 0;
-        }
-        .card {
-            background:white;
-            padding:20px;
-            border-radius:8px;
-            box-shadow:0 2px 5px rgba(0,0,0,0.1);
-            text-align:center;
-            transition: transform var(--transition-speed);
-        }
-        .card:hover { transform: translateY(-5px);}
-        .card i { font-size:2.5em; color: var(--primary-blue); margin-bottom:10px;}
-        .card h4 { font-size:1.1em; margin-bottom:10px; color: var(--primary-blue);}
-        .card p { font-size:0.95em; color:#555;}
-
-        /* --- MAIN --- */
-        main { padding:40px 5%; max-width:1200px; margin:0 auto;}
-        main section { margin-bottom:60px; }
-        main h3 { font-size:1.5em; color:var(--primary-blue); margin-bottom:15px; }
-        main p { color:#444; line-height:1.6; }
-
-        /* --- FOOTER --- */
-        footer {
-            background-color: var(--footer-bg);
-            color:white;
-            padding:30px 5%;
-        }
-        .footer-content {
-            display:grid;
-            grid-template-columns: repeat(3, 1fr);
-            max-width:1200px;
-            margin:0 auto 20px auto;
-            gap:30px;
-        }
-        .footer-col h4 {
-            font-size:1.1em;
-            font-weight:600;
-            border-bottom:2px solid var(--secondary-gold);
-            padding-bottom:5px;
-            margin-bottom:15px;
-            color:white;
-        }
-        .footer-col ul { list-style:none; padding:0; margin:0;}
-        .footer-col a { color:#ccc; text-decoration:none; display:block; padding:5px 0; transition: color var(--transition-speed);}
-        .footer-col a:hover { color:var(--secondary-gold);}
-        .social-icons a { font-size:1.5em; margin-right:15px; color:white; }
-        .copyright-bar { background-color:#002244; color:#bbb; text-align:center; padding:10px 5%; font-size:0.85em;}
-        .copyright-bar a { color:#ccc; text-decoration:underline; }
-
-        @media(max-width:768px){
-            header{flex-direction:column;text-align:center;}
-            nav ul{flex-wrap:wrap; justify-content:center; margin-top:10px;}
-            .hero{padding:40px 5%;} .hero h2{font-size:1.5em;}
-            .quick-access{grid-template-columns:1fr;}
-            .footer-content{grid-template-columns:1fr; text-align:center;}
-            .social-icons{text-align:center;}
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>🏛️ Mairie de Kolwezi</h1>
-        <nav>
-            <ul>
-                <li><a href="#accueil" class="active">Accueil</a></li>
-                <li><a href="#institution">La Mairie</a></li>
-                <li><a href="#actualites">Actualités & Événements</a></li>
-                <li><a href="#services">Services aux citoyens</a></li>
-                <li><a href="#demarches">Démarches en ligne</a></li>
-                <li><a href="#projets">Projets et Développement</a></li>
-                <li><a href="#galerie">Galerie</a></li>
-                <li><a href="#contact">Contact / FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- HERO / Présentation -->
-    <section class="hero" id="accueil">
-        <h2>Bienvenue à la Mairie de Kolwezi</h2>
-        <p>Découvrez nos services municipaux, actualités et projets pour améliorer la vie des citoyens.</p>
-    </section>
-
-    <!-- Accès rapides -->
-    <main>
-        <section class="quick-access">
-            <div class="card">
-                <i class="fas fa-file-alt"></i>
-                <h4>Formulaires en ligne</h4>
-                <p>Téléchargez ou remplissez vos formulaires administratifs.</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-calendar-check"></i>
-                <h4>Prise de rendez-vous</h4>
-                <p>Réservez vos rendez-vous pour les services municipaux.</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-credit-card"></i>
-                <h4>Paiement en ligne</h4>
-                <p>Payez vos taxes et licences directement depuis le site.</p>
-            </div>
-        </section>
-
-        <!-- Institution / La Mairie -->
-        <section id="institution">
-            <h3>La Mairie / Institution</h3>
-            <p>Présentation : histoire, missions, vision et valeurs de la Mairie de Kolwezi.</p>
-            <p>Organigramme : maire, adjoints et services municipaux.</p>
-            <p>Services : urbanisme, voirie, sécurité, environnement…</p>
-        </section>
-
-        <!-- Actualités & Événements -->
-        <section id="actualites">
-            <h3>Actualités & Événements</h3>
-            <p>Communiqués officiels, événements municipaux et alertes importantes.</p>
-        </section>
-
-        <!-- Services aux citoyens -->
-        <section id="services">
-            <h3>Services aux citoyens</h3>
-            <p>État civil, taxes, urbanisme, transports, services sociaux et plus.</p>
-        </section>
-
-        <!-- Démarches en ligne -->
-        <section id="demarches">
-            <h3>Démarches en ligne</h3>
-            <p>Formulaires téléchargeables, prise de rendez-vous et paiements en ligne.</p>
-        </section>
-
-        <!-- Projets et Développement -->
-        <section id="projets">
-            <h3>Projets et Développement</h3>
-            <p>Projets en cours et futurs, partenariats et coopération.</p>
-        </section>
-
-        <!-- Galerie -->
-        <section id="galerie">
-            <h3>Galerie</h3>
-            <p>Photos et vidéos des événements, projets et cérémonies officielles.</p>
-        </section>
-
-        <!-- Contact / FAQ -->
-        <section id="contact">
-            <h3>Contact / FAQ</h3>
-            <p>Formulaire de contact, adresses et numéros utiles, questions fréquentes.</p>
-        </section>
-    </main>
-
-    <!-- FOOTER -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p><i class="fas fa-map-marker-alt"></i> Avenue Lumumba, Kolwezi</p>
-                <p><i class="fas fa-phone"></i> +243 999 000 111</p>
-                <p><i class="fas fa-envelope"></i> contact@mairiekolwezi.cd</p>
-            </div>
-            <div class="footer-col">
-                <h4>Liens rapides</h4>
-                <ul>
-                    <li><a href="#accueil">Accueil</a></li>
-                    <li><a href="#institution">La Mairie</a></li>
-                    <li><a href="#actualites">Actualités & Événements</a></li>
-                    <li><a href="#services">Services aux citoyens</a></li>
-                    <li><a href="#demarches">Démarches en ligne</a></li>
-                    <li><a href="#projets">Projets et Développement</a></li>
-                    <li><a href="#galerie">Galerie</a></li>
-                    <li><a href="#contact">Contact / FAQ</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Suivez-nous</h4>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+<!-- HERO / Slider d'actualités -->
+<section class="hero-slider">
+    <div class="slide active">
+        <img src="images/kolwezi1.jpg" alt="Bienvenue à Kolwezi">
+        <div class="slide-content">
+            <h2>Bienvenue à la Mairie de Kolwezi</h2>
+            <p>Découvrez nos services municipaux et actualités récentes.</p>
+            <a href="#services" class="btn">Accéder aux Services</a>
         </div>
-    </footer>
-
-    <div class="copyright-bar">
-        &copy; 2025 Mairie de Kolwezi - Tous droits réservés | <a href="#">Mentions Légales</a>
+    </div>
+    <div class="slide">
+        <img src="images/kolwezi2.jpg" alt="Projets municipaux">
+        <div class="slide-content">
+            <h2>Nos projets en cours</h2>
+            <p>Amélioration des infrastructures et équipements publics.</p>
+            <a href="#projets" class="btn">Voir les projets</a>
+        </div>
+    </div>
+    <div class="slide">
+        <img src="images/kolwezi3.jpg" alt="Événements">
+        <div class="slide-content">
+            <h2>Événements municipaux</h2>
+            <p>Restez informé des annonces et événements de la ville.</p>
+            <a href="#actualites" class="btn">Actualités & Événements</a>
+        </div>
     </div>
 
-    <!-- FIREBASE -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-        import { getFirestore } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+    <!-- Contrôles -->
+    <div class="slider-controls">
+        <span class="prev"><i class="fas fa-chevron-left"></i></span>
+        <span class="next"><i class="fas fa-chevron-right"></i></span>
+    </div>
+</section>
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyCr3MVt72I5aa_v0IBw7tC142kBjQJTdbU",
-            authDomain: "mairie-web-site.firebaseapp.com",
-            projectId: "mairie-web-site",
-            storageBucket: "mairie-web-site.appspot.com",
-            messagingSenderId: "518997735244",
-            appId: "1:518997735244:web:a4af3a25470a39e20401e9"
-        };
+<style>
+.hero-slider {
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+}
 
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        console.log("✅ Firebase initialisé et Firestore prêt !");
-    </script>
-</body>
-</html>
+.hero-slider .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.8s ease-in-out;
+}
+
+.hero-slider .slide.active { opacity: 1; }
+
+.hero-slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slide-content {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    color: white;
+    max-width: 600px;
+}
+
+.slide-content h2 { font-size: 2.5em; margin-bottom: 10px; }
+.slide-content p { font-size: 1.2em; margin-bottom: 15px; }
+.slide-content .btn {
+    background-color: #ffcc00;
+    color: #003366;
+    padding: 10px 25px;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+.slide-content .btn:hover { background-color: #e6b800; }
+
+.slider-controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    padding: 0 20px;
+}
+
+.slider-controls span {
+    background: rgba(0,0,0,0.5);
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+</style>
+
+<script>
+let slides = document.querySelectorAll('.hero-slider .slide');
+let currentSlide = 0;
+
+const showSlide = (index) => {
+    slides.forEach((slide, i) => {
+        slide.classList.remove('active');
+        if(i === index) slide.classList.add('active');
+    });
+}
+
+// Contrôles
+document.querySelector('.prev').addEventListener('click', () => {
+    currentSlide = (currentSlide === 0) ? slides.length - 1 : currentSlide -1;
+    showSlide(currentSlide);
+});
+document.querySelector('.next').addEventListener('click', () => {
+    currentSlide = (currentSlide === slides.length - 1) ? 0 : currentSlide +1;
+    showSlide(currentSlide);
+});
+
+// Auto-slide toutes les 5 secondes
+setInterval(() => {
+    currentSlide = (currentSlide === slides.length - 1) ? 0 : currentSlide +1;
+    showSlide(currentSlide);
+}, 5000);
+</script>
