--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-/* Reset */
 * { margin:0; padding:0; box-sizing:border-box; }
-body { font-family: 'Roboto', Arial, sans-serif; background:#f4f7f6; color:#333; }
+body { font-family: 'Roboto', sans-serif; background:#f4f7f6; color:#333; }
 
 /* Header & Navigation */
 header { background:#004d40; color:#fff; padding:15px 20px; position:sticky; top:0; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
@@ -21,18 +20,16 @@ nav ul { display:flex; list-style:none; gap:15px; }
 nav ul li { position:relative; }
 nav ul li a { color:#fff; padding:8px 5px; display:block; font-weight:500; transition:0.3s; }
 nav ul li a:hover { color:#ffc107; }
-
 /* Dropdown */
 nav ul li ul { display:none; position:absolute; top:100%; left:0; background:#00695c; min-width:200px; border-radius:5px; box-shadow:0 4px 8px rgba(0,0,0,0.2); }
 nav ul li:hover ul { display:block; }
 nav ul li ul li a { margin:0; padding:10px; color:#fff; font-weight:400; }
 nav ul li ul li a:hover { background:#004d40; color:#ffc107; }
-
 /* Hamburger for mobile */
 .menu-toggle { display:none; cursor:pointer; font-size:1.5rem; color:#fff; }
 
 /* Slider */
-.slider { position:relative; max-height:500px; overflow:hidden; margin-bottom:40px; }
+.slider { position:relative; overflow:hidden; margin-bottom:40px; border-radius:8px; }
 .slides { display:flex; transition:0.6s ease; }
 .slide { min-width:100%; position:relative; }
 .slide img { width:100%; height:500px; object-fit:cover; filter:brightness(75%); }
@@ -43,6 +40,11 @@ nav ul li ul li a:hover { background:#004d40; color:#ffc107; }
 .prev { left:20px; }
 .next { right:20px; }
 .prev:hover, .next:hover { background:rgba(0,0,0,0.7); }
+
+/* Slider dots */
+.dots { text-align:center; position:absolute; bottom:15px; width:100%; }
+.dot { display:inline-block; width:12px; height:12px; margin:0 5px; background:#fff; border-radius:50%; cursor:pointer; opacity:0.5; transition:0.3s; }
+.dot.active { opacity:1; background:#ffc107; }
 
 /* Sections */
 section { padding:60px 20px; max-width:1200px; margin:auto; background:#fff; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); margin-bottom:30px; }
@@ -114,6 +116,10 @@ footer { background:#004d40; color:#fff; text-align:center; padding:30px 20px; }
     </div>
     <div class="prev">&#10094;</div>
     <div class="next">&#10095;</div>
+    <div class="dots">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+    </div>
 </section>
 
 <!-- Présentation -->
@@ -143,21 +149,26 @@ footer { background:#004d40; color:#fff; text-align:center; padding:30px 20px; }
 </footer>
 
 <script type="module">
-/* Slider JS */
-let index = 0;
-const slides = document.querySelectorAll('.slide');
-const total = slides.length;
-function showSlide(i){ slides.forEach((s, idx)=> s.style.transform = `translateX(${-100*i}%)`); }
-function nextSlide(){ index = (index + 1) % total; showSlide(index); }
-function prevSlide(){ index = (index - 1 + total) % total; showSlide(index); }
-document.querySelector('.next').addEventListener('click', nextSlide);
-document.querySelector('.prev').addEventListener('click', prevSlide);
-setInterval(nextSlide, 5000);
-
 /* Hamburger toggle */
 const menuToggle = document.querySelector('.menu-toggle');
 const navUl = document.querySelector('nav ul');
 menuToggle.addEventListener('click', ()=>{ navUl.classList.toggle('show'); });
+
+/* Slider avec dots */
+let index = 0;
+const slides = document.querySelectorAll('.slide');
+const dots = document.querySelectorAll('.dot');
+function showSlide(i){
+    slides.forEach((s, idx)=> s.style.transform = `translateX(${-100*i}%)`);
+    dots.forEach(d => d.classList.remove('active'));
+    dots[i].classList.add('active');
+}
+function nextSlide(){ index = (index + 1) % slides.length; showSlide(index); }
+function prevSlide(){ index = (index - 1 + slides.length) % slides.length; showSlide(index); }
+document.querySelector('.next').addEventListener('click', nextSlide);
+document.querySelector('.prev').addEventListener('click', prevSlide);
+dots.forEach((dot, i)=> dot.addEventListener('click', ()=>{ index=i; showSlide(index); }));
+setInterval(nextSlide, 5000);
 
 /* Firebase */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
