--- a/index.html
+++ b/index.html
@@ -348,6 +348,16 @@
                     </ul>
                 </li>
                 <li class="has-submenu">
+                    <a href="actualites.html">Services  <i class="fa-solid fa-caret-down"></i></a>
+                    <ul class="submenu">
+                        <li><a href="communiques.html">État civil </a></li>
+                        <li><a href="evenements.html">Taxes et impôts locaux </a></li>
+                        <li><a href="alertes.html">Urbanisme & permis </a></li>
+                         <li><a href="alertes.html">Transports & voirie  </a></li>
+                         <li><a href="alertes.html">Services sociaux  </a></li>
+                    </ul>
+                </li>
+                <li class="has-submenu">
                     <a href="demarches.html">Démarches <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
                         <li><a href="formulaires.html">Formulaires</a></li>
@@ -368,9 +378,14 @@
                     <ul class="submenu">
                         <li><a href="photos.html">Photos</a></li>
                         <li><a href="videos.html">Vidéos</a></li>
+                        <li><a href="videos.html">cérémonies officielles</a></li>
+                        
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact / FAQ</a></li>
+                <li><a href="photos.html">Formulaire de contact.</a></li>
+                <li><a href="videos.html">Adresses et numéros utiles.</a></li>
+                <li><a href="photos.html">Questions fréquentes sur les démarches et services.</a></li>
             </ul>
         </nav>
     </div>
