--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     <div class="container header-content">
         <!-- Logo et Titre -->
         <a href="index.html" class="logo">
-            <i class="fa-solid fa-gavel"></i> Kolwezi
+            <i class="fa-solid fa-gavel"></i> MAIRIE DE KOLWEZI
         </a>
         
         <!-- Navigation -->
