--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@
                         <li><a href="alertes.html"><i class="fa-solid fa-triangle-exclamation"></i> Alertes et annonces</a></li>
                     </ul>
                 </li>
+                
                  <li class="has-submenu">
                     <a href="demarches.html"><i class="fa-solid fa-file-signature me-2"></i>Démarches <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
@@ -620,11 +621,26 @@
                         <li><a href="rendezvous.html"><i class="fa-solid fa-clock"></i> Prise de rendez-vous</a></li>
                         <li><a href="paiement.html"><i class="fa-solid fa-credit-card"></i> Paiement en ligne</a></li>
                     </ul>
+                     <li class="has-submenu">
+    <a href="projets.html">Projets <i class="fa-solid fa-caret-down"></i></a>
+    <ul class="submenu">
+        <li><a href="infrastructures.html">Infrastructures & Équipements publics</a></li>
+        <li><a href="urbanisme.html">Urbanisme & Aménagement</a></li>
+        <li><a href="projets_futurs.html">Projets futurs & Plans stratégiques</a></li>
+        <li><a href="partenariats.html">Partenariats & Coopération</a></li>
+    </ul>
+</li>
                 </li>
-                <li><a href="projets.html"><i class="fa-solid fa-chart-line me-2"></i>Projets</a></li>
-                <li><a href="galerie.html"><i class="fa-solid fa-camera me-2"></i>Galerie</a></li>
-                <li><a href="contact.html"><i class="fa-solid fa-headset me-2"></i>Contact / FAQ</a></li>
+                <li><a href="galerie.html"><i class="fa-solid fa-camera me-2"></i>Galerie</a></li>   
             </ul>
+            <li class="has-submenu">
+    <a href="contact.html">Contact / FAQ <i class="fa-solid fa-caret-down"></i></a>
+    <ul class="submenu">
+        <li><a href="formulaire_contact.html">Formulaire de contact</a></li>
+        <li><a href="adresses_utiles.html">Adresses & Numéros utiles</a></li>
+        <li><a href="faq.html">Questions fréquentes (FAQ)</a></li>
+    </ul>
+</li>
         </nav>
     </div>
 </header>
