--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 <header>
     <div class="container header-content">
         <a href="index.html" class="logo-container">
-            <img src="logo_kolwezi.png" alt="Logo de la Mairie de Kolwezi" class="logo-img">
+            <img src="klz.jpeg.jpeg" alt="Logo de la Mairie de Kolwezi" class="logo-img">
             <div class="logo-text">
                 <span>Kolwezi</span>
                 <small>Portail Officiel</small>
