--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
 <header>
     <div class="container header-content">
         <!-- Logo et Titre -->
-        <a href="index.html" class="klz.jpeg">
-        <i class="fa-solid fa-gavel"></i>MAIRIE KOLWEZI
-        </a>
+       <a href="index.html" class="logo">
+    <img src="klz.jpeg" alt="Description du logo (texte alternatif)" />
+</a>
         
         <!-- Navigation -->
         <nav role="navigation" aria-label="Menu principal">
